完全降级为Java17项目